@@ -1,4 +1,7 @@
 2017-11-23  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* server-src/planner.c: Do not log L_DISK if no_dump
+
+2017-11-23  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* installcheck/failure-application-stderr.pl: Use
 	  $Amanda::Paths::APPLICATION_DIR instead od hardcoded value
 
